@@ -1,3 +1,3 @@
 require File.dirname(__FILE__) + '/../../../lib/mkrf'
 
-Mkrf::Generator.new('libtrivial_so.bundle')
+Mkrf::Generator.new('libtrivial.bundle')
