@@ -1,2 +1,5 @@
+= svn
+* [FIXED] default source pattern for Generator
+
 = 0.1.0  6/28/06
 * First release.
